Loop command can now get a whole expression instead of just a constant. BASETOKENS is now a new interface which let Advanced tokens know that they can add you to their data. GroupTokens are a new ADVToken inherited class which may hold other GroupTokens or just other BASETOKENS inside. Project has been divided into two different Packages, Basic and Advanced. You can type type ++ and it will translate directly into +=1 OperatorToken is a new BASETOKEN inherited class, which hold operators like < > >= and so on.