@@ -1,7 +1,13 @@
 import java.io.BufferedReader;
 import java.io.FileReader;
 import java.io.IOException;
-import Tokens.*;
+
+import Tokens.Advanced.ADVToken;
+import Tokens.Advanced.CommandToken;
+import Tokens.Advanced.GroupToken;
+import Tokens.Advanced.ListCommandToken;
+import Tokens.BASETOKEN;
+import Tokens.Basic.*;
 
 import java.io.PrintWriter;
 import java.util.Arrays;
@@ -10,6 +16,7 @@ import java.util.regex.Pattern;
 
 public class Tokenizer {
     private Character[] separators = {'{', '}', ';', '(', ')', '|', '+', '*', '/', '-', '>', '~'}, ws = {' ', '\t', '\n'};
+    private String[] operators = {"<=", ">=", "==", "<", ">", "!="};
     private String[] commands = {"loop"};
     private static boolean enableComments = true, enableNoise = false;
 
@@ -52,7 +59,16 @@ public class Tokenizer {
         boolean donttokenize = false;
         while(i < s.length()){
             if(!donttokenize) {
-                if (in(s.charAt(i), separators)) {
+                if (in(pairAt(s,i), operators)){
+                    if (start != i)
+                        tokens.add(GenerateToken(s.substring(start, i)));
+                    tokens.add(new OperatorToken(pairAt(s, i)));
+                    start = i + pairAt(s, i).length();
+                } else if (in(s.charAt(i), ws)) {
+                    if (start != i)
+                        tokens.add(GenerateToken(s.substring(start, i)));
+                    start = i + 1;
+                } else if (in(s.charAt(i), separators)) {
                     if(s.charAt(i) == '{' && tokens.getLast().GetData().equals('~')) {
                         tokens.removeLast();
                         startedPure = true;
@@ -63,11 +79,12 @@ public class Tokenizer {
                     }
                     if (start != i)
                         tokens.add(GenerateToken(s.substring(start, i)));
-                    tokens.add(new SeparatorToken(s.charAt(i)));
-                    start = i + 1;
-                } else if (in(s.charAt(i), ws)) {
-                    if (start != i)
-                        tokens.add(GenerateToken(s.substring(start, i)));
+                    if(s.charAt(i) == '(')
+                        tokens.add(new StartGroupToken());
+                    else if(s.charAt(i) == ')')
+                        tokens.add(new EndGroupToken());
+                    else
+                        tokens.add(new SeparatorToken(s.charAt(i)));
                     start = i + 1;
                 } else if(s.charAt(i) == '"' || s.charAt(i) == '\''){
                     if (start != i)
@@ -149,25 +166,59 @@ public class Tokenizer {
         LinkedList<ListCommandToken> all = new LinkedList<>();
         all.add(main);
         ListCommandToken current = all.get(0);
-        CommandToken temp = new CommandToken();
+        LinkedList<ADVToken<BASETOKEN>> allcommands = new LinkedList<>();
+        allcommands.add(new CommandToken());
+        ADVToken<BASETOKEN> currentcommand = allcommands.get(0);
+        int opengroups = 0;
         for(Token t: tokens){
-            if(t.getType().equals("Separator")) {
-                if (t.GetData().equals(';')) {
-                    current.Append(temp);
-                    temp = new CommandToken();
-                } else if ((t.GetData().equals('{'))) {
-                    all.add(new ListCommandToken(current.GetIndent() + "\t", temp));
-                    temp = new CommandToken();
-                    current = all.get(all.size() - 1);
-                } else if (t.GetData().equals('}')) {
-                    temp = new CommandToken();
-                    all.get(all.size() - 2).Append(all.get(all.size() - 1));
-                    all.removeLast();
-                } else {
-                    temp.Append(t);
-                }
-            } else {
-                    temp.Append(t);
+            switch (t.getType()) {
+                case "StartGroup":
+                    opengroups++;
+                    System.out.println("added group="+opengroups);
+                    allcommands.add(new GroupToken());
+                    currentcommand = allcommands.getLast();
+                    break;
+                case "EndGroup":
+                    opengroups--;
+                    System.out.println("closed group="+opengroups);
+                    GroupToken temp = (GroupToken) allcommands.getLast();
+                    allcommands.removeLast();
+                    currentcommand = allcommands.getLast();
+                    currentcommand.Append(temp);
+                    break;
+                case "Separator":
+                    if (t.GetData().equals(';')) {
+                        current.Append(currentcommand);
+                        allcommands.clear();
+                        allcommands.add(new CommandToken());
+                        currentcommand = allcommands.getLast();
+                    } else if ((t.GetData().equals('{'))) {
+                        all.add(new ListCommandToken(current.GetIndent() + "\t", (CommandToken) currentcommand));
+                        allcommands.clear();
+                        allcommands.add(new CommandToken());
+                        currentcommand = allcommands.getLast();
+                        current = all.get(all.size() - 1);
+                    } else if (t.GetData().equals('}')) {
+                        allcommands.clear();
+                        allcommands.add(new CommandToken());
+                        currentcommand = allcommands.getLast();
+                        all.get(all.size() - 2).Append(all.get(all.size() - 1));
+                        all.removeLast();
+                    } else if(t.getText().equals("+") && currentcommand.GetData().getLast().getText().equals("+")){
+                        currentcommand.GetData().removeLast();
+                        currentcommand.Append(new TextToken("+=1"));
+                    } else {
+                        currentcommand.Append(t);
+                    }
+                    break;
+                case "Operator":
+                    if(t.getText().equals("++")) {
+                        currentcommand.Append(new TextToken("+=1"));
+                        break;
+                    }
+                default:
+                    currentcommand.Append(t);
+                    break;
             }
 
         }
@@ -198,11 +249,20 @@ public class Tokenizer {
             System.out.println(token);
     }
 
-    private boolean in(Object o, Object[] arr){
+    private static boolean in(Object o, Object[] arr){
         for(Object obj : arr)
             if(o.equals(obj))
                 return true;
         return false;
+    }
+
+    private String pairAt(String s, int i){
+        if(s.length() <= i+1)
+            return s.substring(i,i+1);
+        String temp = s.substring(i, i+2);
+        if(in(temp.charAt(1), ws))
+            return temp.substring(0,1);
+        return s.substring(i, i+2);
     }
 
     public static void Execute(String path, boolean noise){
@@ -222,10 +282,10 @@ public class Tokenizer {
             System.out.println("PIE CODE: \n");
             System.out.println(piecode);
             System.out.println("-----------------------------------------");
-            System.out.println("BASE TOKENS: \n");
+            System.out.println("BASIC TOKENS: \n");
             t.PrintArr(tokens);
             System.out.println("-----------------------------------------");
-            System.out.println("TOKENS: \n");
+            System.out.println("ADVANCED TOKENS: \n");
             t.PrintArr(advTokens);
             System.out.println("-----------------------------------------");
             System.out.println("TRANSLATED CODE: \n");
